--- a/index.html
+++ b/index.html
@@ -161,6 +161,37 @@
             </section>
 
         </main>
+
+        <footer class="footer">
+            <section class="footer-up">
+                <div class="container">
+                    <div class="footer-up__wrapper">
+                        <h2 class="footer-up__text">Create a new generation website for your business.</h2>
+
+                        <div class="footer-up__email">
+                            <input type="email" class="footer-up__txt" placeholder="Email address">
+                            <button class="footer-up__btn">
+                                <img src="images/right-arrow.svg" alt="" class="">
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+            <section class="footer-bottom">
+                <div class="container">
+                    <div class="footer-bottom__wrapper">
+                        <p class="copy-right__text">Copyright © 2024-2025 </p>
+                        <p class="copy-right__text">Interactive ART Company  All rights reserved</p>
+                    </div>
+
+                </div>
+ 
+            </section>
+
+        </footer>
+
         <script src="scripts/app.js"></script>
     </body>
 </html>
