--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         </ul>
                     </nav>
                     <a href="#" class="header_link">Contact us</a>
+                    <span class="header__icon"><i class="fa fa-bars"></i></span>
                 </section>
                 <section class="header-bottom">
                     <div class="header-content">
